--- a/C06-Heapsort/6.2.md
+++ b/C06-Heapsort/6.2.md
@@ -51,7 +51,7 @@ The code for MAX-HEAPIFY is quite efficient in terms of constant factors, except
 ### `Answer`
 
 	MIN-HEAPIFY(A, i):
-		while i ≤ heap-size[A]:
+		while i ≤ heap-size[A]/2:	//you don't need to check leaf as parent
 			l <- LEFT(i)
 			r <- RIGHT(i)
 			if l ≤ heap-size[A] and A[l] > A[i]:
